prep/networkacl.json
{
    "NetworkAcls": [
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-0138d153c63bf12f8",
                    "NetworkAclId": "acl-0f54a600673d2fe67",
                    "SubnetId": "subnet-00f60f80ea3619222"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-0b0ab9a3edcbd0841",
                    "NetworkAclId": "acl-0f54a600673d2fe67",
                    "SubnetId": "subnet-0190dd3389721bb35"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-0baf9b86589009a54",
                    "NetworkAclId": "acl-0f54a600673d2fe67",
                    "SubnetId": "subnet-09d3709d2ba6bf879"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-09d511fa5055c3e4d",
                    "NetworkAclId": "acl-0f54a600673d2fe67",
                    "SubnetId": "subnet-02472f419077de77d"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-0f54a600673d2fe67",
            "Tags": [],
            "VpcId": "vpc-0eff3a673af9c0c58",
            "OwnerId": "618044871166"
        },
        {
            "Associations": [
                {
                    "NetworkAclAssociationId": "aclassoc-64fafd2a",
                    "NetworkAclId": "acl-00c9a37d",
                    "SubnetId": "subnet-7ee96f33"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-62fafd2c",
                    "NetworkAclId": "acl-00c9a37d",
                    "SubnetId": "subnet-e85e64d6"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-65fafd2b",
                    "NetworkAclId": "acl-00c9a37d",
                    "SubnetId": "subnet-67c13238"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-60fafd2e",
                    "NetworkAclId": "acl-00c9a37d",
                    "SubnetId": "subnet-48fb0669"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-63fafd2d",
                    "NetworkAclId": "acl-00c9a37d",
                    "SubnetId": "subnet-080ba206"
                },
                {
                    "NetworkAclAssociationId": "aclassoc-67fafd29",
                    "NetworkAclId": "acl-00c9a37d",
                    "SubnetId": "subnet-db00f7bd"
                }
            ],
            "Entries": [
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": true,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "allow",
                    "RuleNumber": 100
                },
                {
                    "CidrBlock": "0.0.0.0/0",
                    "Egress": false,
                    "Protocol": "-1",
                    "RuleAction": "deny",
                    "RuleNumber": 32767
                }
            ],
            "IsDefault": true,
            "NetworkAclId": "acl-00c9a37d",
            "Tags": [],
            "VpcId": "vpc-87fefdfd",
            "OwnerId": "618044871166"
        }
    ]
}
