prep/sg.json
{
    "SecurityGroups": [
        {
            "Description": "default VPC security group",
            "GroupName": "default",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-233d400d",
                            "UserId": "618044871166"
                        }
                    ]
                }
            ],
            "OwnerId": "618044871166",
            "GroupId": "sg-233d400d",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "VpcId": "vpc-87fefdfd"
        },
        {
            "Description": "[DO NOT DELETE] Security Group that allows outbound NFS traffic for SageMaker Notebooks Domain [d-9sfx0r2l1tmd]",
            "GroupName": "security-group-for-outbound-nfs-d-9sfx0r2l1tmd",
            "IpPermissions": [],
            "OwnerId": "618044871166",
            "GroupId": "sg-0835ae93bd5650d87",
            "IpPermissionsEgress": [
                {
                    "FromPort": 2049,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 2049,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-0f00405030096ac2f",
                            "UserId": "618044871166"
                        }
                    ]
                }
            ],
            "Tags": [
                {
                    "Key": "ManagedByAmazonSageMakerResource",
                    "Value": "arn:aws:sagemaker:us-east-1:618044871166:domain/d-9sfx0r2l1tmd"
                }
            ],
            "VpcId": "vpc-87fefdfd"
        },
        {
            "Description": "default VPC security group",
            "GroupName": "default",
            "IpPermissions": [],
            "OwnerId": "618044871166",
            "GroupId": "sg-04ddb63b6a6c50b01",
            "IpPermissionsEgress": [],
            "VpcId": "vpc-0eff3a673af9c0c58"
        },
        {
            "Description": "VpcRdsStack/PostgresSG",
            "GroupName": "slackbot-rag-pgvector-db-sg",
            "IpPermissions": [
                {
                    "FromPort": 5432,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "111.108.21.161/32"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 5432,
                    "UserIdGroupPairs": [
                        {
                            "Description": "Allow AppRunner VPC Connector to access Postgres",
                            "GroupId": "sg-037dd7385c6a0908c",
                            "UserId": "618044871166"
                        }
                    ]
                }
            ],
            "OwnerId": "618044871166",
            "GroupId": "sg-013bdb35ed7210ee4",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0",
                            "Description": "Allow all outbound traffic by default"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "Tags": [
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "VpcRdsStack"
                },
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "PostgresSG88C833CF"
                },
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:us-east-1:618044871166:stack/VpcRdsStack/23d23170-813d-11ee-a710-0aa7e870cba7"
                }
            ],
            "VpcId": "vpc-0eff3a673af9c0c58"
        },
        {
            "Description": "[DO NOT DELETE] Security Group that allows inbound NFS traffic for SageMaker Notebooks Domain [d-9sfx0r2l1tmd]",
            "GroupName": "security-group-for-inbound-nfs-d-9sfx0r2l1tmd",
            "IpPermissions": [
                {
                    "FromPort": 2049,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 2049,
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-0835ae93bd5650d87",
                            "UserId": "618044871166"
                        }
                    ]
                }
            ],
            "OwnerId": "618044871166",
            "GroupId": "sg-0f00405030096ac2f",
            "IpPermissionsEgress": [],
            "Tags": [
                {
                    "Key": "ManagedByAmazonSageMakerResource",
                    "Value": "arn:aws:sagemaker:us-east-1:618044871166:domain/d-9sfx0r2l1tmd"
                }
            ],
            "VpcId": "vpc-87fefdfd"
        },
        {
            "Description": "launch-wizard-1 created 2023-01-18T10:55:20.301Z",
            "GroupName": "launch-wizard-1",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 443,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 443,
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "618044871166",
            "GroupId": "sg-0eb10b568a390496d",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "VpcId": "vpc-87fefdfd"
        },
        {
            "Description": "VpcRdsStack/AppRunnerVpcConnectorSG",
            "GroupName": "apprunner-vpc-connector-sg",
            "IpPermissions": [],
            "OwnerId": "618044871166",
            "GroupId": "sg-037dd7385c6a0908c",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0",
                            "Description": "Allow all outbound traffic by default"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "Tags": [
                {
                    "Key": "aws:cloudformation:stack-id",
                    "Value": "arn:aws:cloudformation:us-east-1:618044871166:stack/VpcRdsStack/23d23170-813d-11ee-a710-0aa7e870cba7"
                },
                {
                    "Key": "aws:cloudformation:logical-id",
                    "Value": "AppRunnerVpcConnectorSG0DDCF9E4"
                },
                {
                    "Key": "aws:cloudformation:stack-name",
                    "Value": "VpcRdsStack"
                }
            ],
            "VpcId": "vpc-0eff3a673af9c0c58"
        }
    ]
}
